--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "devDependencies": {
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
